fixed contact page alignment

--- a/src/pages/page-css/contact.module.css
+++ b/src/pages/page-css/contact.module.css
@@ -9,7 +9,7 @@
 }
 
 .input-field {
-  flex: 3;
+  flex: 4;
   box-sizing: border-box;
   padding: 12px 20px;
   margin: 8px 0;
@@ -21,7 +21,7 @@
 .input-label {
   flex: 1;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -90,5 +90,9 @@
     font-size: 0.9em;
     flex-basis: 100px;
     height: 35px;
+  }
+
+  .submit-button:hover .reset-button:hover {
+    background-color: unset;
   }
 }
